--- a/src/app/Reusable components/header/header.component.html
+++ b/src/app/Reusable components/header/header.component.html
@@ -1,28 +1,80 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><img src="images/logo amazing stars.png" style="width: 185px;"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
+ <div class="f_social_icon" id="f_social">
+                                    <a href="#" class="fab fa-facebook"></a>
+                                    <a href="#" class="fab fa-twitter"></a>
+                                    <a href="#" class="fab fa-linkedin"></a>
+                                    <a href="#" class="fab fa-pinterest"></a>
+                                </div>
+<a  data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fa-solid fa-bars-staggered"></i></a>
+
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="" routerLinkActive="active">Home</a>
+          <a class="nav-link" aria-current="page" routerLink="" routerLinkActive="active">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/aboutus" routerLinkActive="active">About US</a>
+          <a class="nav-link" routerLink="/aboutus" routerLinkActive="active">ABOUT US</a>
         </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="/services" routerLinkActive="active">Services</a>
+          <a class="nav-link" routerLink="/services" routerLinkActive="active">SERVICES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " routerLink="/contactus" routerLinkActive="active">Contact US</a>
+          <a class="nav-link " routerLink="/contactus" routerLinkActive="active">CONTACT US</a>
         </li>
       </ul>
       
     </div>
+</div>
+</nav>
 
- <div class="f_social_icon">
+<!-- off canva -->
+
+
+
+
+<div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+  <div class="offcanvas-header">
+    <a class="navbar-brand" href="#"><img src="images/logo amazing stars.png" style="width: 185px;"></a>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    
+  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="" routerLinkActive="active">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/aboutus" routerLinkActive="active"> ABOUT US</a>
+        </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="/services" routerLinkActive="active">SERVICES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " routerLink="/contactus" routerLinkActive="active">CONTACT US</a>
+        </li>
+
+ <li class="nav-item">
+          <a class="nav-link "  routerLink="/plumbers" routerLinkActive="active">PLUMBING SERVICES</a>
+        </li>
+
+
+ <li class="nav-item">
+          <a class="nav-link "  routerLink="/technology" routerLinkActive="active">TECHNOLOGY SERVICES</a>
+        </li>
+
+
+
+
+
+      </ul>
+
+ <div class="mm">
                                     <a href="#" class="fab fa-facebook"></a>
                                     <a href="#" class="fab fa-twitter"></a>
                                     <a href="#" class="fab fa-linkedin"></a>
@@ -30,5 +82,7 @@
                                 </div>
 
 
+
   </div>
-</nav>
+  
+</div>
