--- a/src/app/Reusable components/footer/footer.component.html
+++ b/src/app/Reusable components/footer/footer.component.html
@@ -41,6 +41,11 @@
                                     <a href="#" class="fab fa-linkedin"></a>
                                     <a href="#" class="fab fa-pinterest"></a>
                                 </div>
+
+
+
+
+
                             </div>
                         </div>
                     </div>
@@ -54,7 +59,7 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-6 col-sm-7">
-                            <p class="mb-0 f_400 fs-5">©Amazing Stars  All rights reserved.</p>
+                            <p class="mb-0 f_400 fs-5">{{currentyear}} © Amazing Stars  All rights reserved.</p>
                         </div>
                        
                     </div>
